# arcane-fishing-bot

./: .gitignore  AGENT.md  AGENTS.md  BUILDING_MACOS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.base.json  tsconfig.json  vite.config.ts
docs/: suggestions.md
electron/: main.js  preload.js
scripts/: compile.js
src/: App.svelte  app.css  app.d.ts  complete-rust-fishing-bot.txt  main.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: backend.rs  main.rs
src/lib/: ipc.ts
src/lib/components/ui/: badge.svelte  button.svelte  input.svelte  label.svelte  select.svelte  switch.svelte
src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
src/lib/components/ui/tabs/: tabs-content.svelte  tabs-context.ts  tabs-list.svelte  tabs-trigger.svelte  tabs.svelte
