[package]
name = "arcane-fishing-bot-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
tauri = { version = "1.5", features = ["dialog-all", "shell-open", "window-all"] }
image = "0.24"
screenshots = "0.8"
enigo = "0.4.2"
rusty-tesseract = "1.1"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
